tg-6207. [FE] Crear componente de "datos antropométricos" para unificar código y estética

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/ambulatoria-mixins.scss
@@ -1,7 +1,9 @@
 @import "./components/vacunas/vacunas.component.scss-theme.scss";
 @import "./dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss-theme.scss";
+@import "./components/datos-antropometricos-nueva-consulta/datos-antropometricos-nueva-consulta-theme.scss";
 
 @mixin ambulatoria-mixins($theme) {
     @include app-vacunas($theme);
 	@include app-nueva-consulta-dock-popup($theme);
+    @include app-datos-antropometricos-nueva-consulta($theme);
 }
