tg-6240. [FE] Incluir componentes nuevos en consulta ambulatoria y consulta de enfermería

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup-enfermeria/nueva-consulta-dock-popup-enfermeria.component.html
@@ -22,162 +22,17 @@
 			</div>
 		</div>
 
-		<div id="anthropometric_data">
-			<div class="margin-bottom">
-				<app-document-section
-					[sectionTitle]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.TITLE'">
-					<ng-container concept-form>
-						<form [formGroup]="datosAntropometricosNuevaConsultaService.getForm()">
-							<div>
-								<mat-form-field [floatLabel]="'never'" appearance="outline">
-									<mat-label [translate]="'internaciones.anamnesis.datos-antropometricos.BLOOD_TYPE'">
-									</mat-label>
-									<mat-select placeholder="B+" formControlName="bloodType">
-										<mat-option
-											*ngFor="let bloodType of datosAntropometricosNuevaConsultaService?.getBloodTypes()"
-											[value]="bloodType">
-											{{ bloodType.description }}
-										</mat-option>
-									</mat-select>
-									<button id="clear_blood_type" type="button" mat-button *ngIf="datosAntropometricosNuevaConsultaService.getForm().value.bloodType" matSuffix
-										color="warn" mat-icon-button (click)="clear(datosAntropometricosNuevaConsultaService.getForm().controls.bloodType); $event.stopPropagation()">
-										<mat-icon>close</mat-icon>
-									</button>
-								</mat-form-field>
-							</div>
-							<div>
-								<mat-form-field [floatLabel]="'never'" appearance="outline">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.HEIGHT'">
-									</mat-label>
-									<input id="height" formControlName="height" placeholder="Ej: 180" type="number"
-										matInput>
-								</mat-form-field>
-								<h5 class="recomendado recomendado-antropo"
-									[translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
-							</div>
-							<div>
-								<mat-form-field [floatLabel]="'never'" appearance="outline">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.datos-antropometricos.WEIGHT'">
-									</mat-label>
-									<input id="weight" formControlName="weight" placeholder="Ej: 70" type="number"
-										matInput>
-								</mat-form-field>
-								<h5 class="recomendado recomendado-antropo"
-									[translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
-							</div>
-						</form>
-					</ng-container>
-				</app-document-section>
-			</div>
-		</div>
-		<div id="vital_signs">
-			<div class="margin-bottom">
-				<app-document-section class="margin-bottom"
-					[sectionTitle]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TITLE'">
-					<ng-container concept-form>
-						<form fxLayout="column" fxLayoutGap="10px"
-							[formGroup]="signosVitalesNuevaConsultaService.getForm()">
-							<div fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
-								<div class="signos-vitales-field" formGroupName="heartRate">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.HEART_RATE'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="heart_rate" formControlName="value" placeholder="00" type="number"
-											matInput>
-									</mat-form-field>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.heartRate.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'heartRate')">
-									</app-effective-time>
-								</div>
-								<div class="signos-vitales-field" formGroupName="respiratoryRate">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.RESPIRATORY_RATE'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="respiratory_rate" formControlName="value" placeholder="00"
-											type="number" matInput>
-									</mat-form-field>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.respiratoryRate.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'respiratoryRate')">
-									</app-effective-time>
-								</div>
-							</div>
+		<app-datos-antropometricos-nueva-consulta
+			[datosAntropometricosNuevaConsultaService]="datosAntropometricosNuevaConsultaService">
+		</app-datos-antropometricos-nueva-consulta>
 
-							<div fxFlex="100%" fxLayout.lt-lg="column">
-								<div class="signos-vitales-field" formGroupName="temperature">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TEMPERATURE'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="temperature" formControlName="value" placeholder="00.0" type="number"
-											matInput>
-									</mat-form-field>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.temperature.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'temperature')">
-									</app-effective-time>
-								</div>
-								<div class="signos-vitales-field" formGroupName="bloodOxygenSaturation">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.BLOOD_OXYGEN_SATURATION'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="blood_oxygen_saturation" formControlName="value" placeholder="00"
-											type="number" matInput>
-									</mat-form-field>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.bloodOxygenSaturation.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'bloodOxygenSaturation')">
-									</app-effective-time>
-								</div>
-							</div>
-
-							<div fxFlex="100%" fxLayout.lt-lg="column">
-								<div class="signos-vitales-field" formGroupName="systolicBloodPressure">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.SYSTOLIC_BLOOD_PRESSURE'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="systolic_blood_pressure" formControlName="value" placeholder="00"
-											type="number" matInput>
-									</mat-form-field>
-									<h5 class="recomendado recomendado-tension"
-										[translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.systolicBloodPressure.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'systolicBloodPressure')">
-									</app-effective-time>
-								</div>
-								<div class="signos-vitales-field" formGroupName="diastolicBloodPressure">
-									<mat-label
-										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.DIASTOLIC_BLOOD_PRESSURE'">
-									</mat-label>
-									<mat-form-field [floatLabel]="'never'" appearance="outline">
-										<input id="diastolic_blood_pressure" formControlName="value" placeholder="00"
-											type="number" matInput>
-									</mat-form-field>
-									<h5 class="recomendado recomendado-tension"
-										[translate]="'ambulatoria.paciente.nueva-consulta.RECOMENDADO'"></h5>
-									<app-effective-time
-										[effectiveTime]="signosVitalesNuevaConsultaService.getForm().value.diastolicBloodPressure.effectiveTime"
-										(update)="signosVitalesNuevaConsultaService.setVitalSignEffectiveTime($event, 'diastolicBloodPressure')">
-									</app-effective-time>
-								</div>
-							</div>
-						</form>
-					</ng-container>
-				</app-document-section>
-			</div>
-		</div>
+		<app-factores-de-riesgo-nueva-consulta [signosVitalesNuevaConsultaService]="signosVitalesNuevaConsultaService">
+		</app-factores-de-riesgo-nueva-consulta>
 
 		<div id="problem">
 			<div class="margin-bottom">
-				<app-document-section [sectionTitle]="'ambulatoria.paciente.new-nursing-consultation.ASSOCIATED_PROBLEM'">
+				<app-document-section
+					[sectionTitle]="'ambulatoria.paciente.new-nursing-consultation.ASSOCIATED_PROBLEM'">
 					<ng-container concept-form>
 						<div fxLayout="row" [formGroup]="formEvolucion">
 							<mat-form-field appearance="outline">
