--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/factores-de-riesgo-nueva-consulta/factores-de-riesgo-nueva-consulta.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/factores-de-riesgo-nueva-consulta/factores-de-riesgo-nueva-consulta.component.html
@@ -29,7 +29,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="heart_rate" name="heart_rate" formControlName="value" placeholder="00"
-                                    type="number" matInput>
+                                    type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -48,7 +48,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="respiratory_rate" name="respiratory_rate" formControlName="value"
-                                    placeholder="00" type="number" matInput>
+                                    placeholder="00" type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -70,7 +70,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="temperature" name="temperature" formControlName="value" placeholder="00.0"
-                                    type="number" matInput>
+                                    type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -90,7 +90,8 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="blood_oxygen_saturation" name="blood_oxygen_saturation"
-                                    formControlName="value" placeholder="00" type="number" matInput>
+                                    formControlName="value" placeholder="00" type="number" matInput
+                                    (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -113,7 +114,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="systolic_blood_pressure" name="systolicBloodPressure" formControlName="value"
-                                    placeholder="00" type="number" matInput>
+                                    placeholder="00" type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -135,7 +136,8 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="diastolic_blood_pressure" name="diastolicBloodPressure"
-                                    formControlName="value" placeholder="00" type="number" matInput>
+                                    formControlName="value" placeholder="00" type="number" matInput
+                                    (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -159,7 +161,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="blood_glucose" name="blood_glucose" formControlName="value" placeholder="00"
-                                    type="number" matInput>
+                                    type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -179,7 +181,8 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="glycosylated_hemoglobin" name="glycosylated_hemoglobin"
-                                    formControlName="value" placeholder="00.00" type="number" matInput>
+                                    formControlName="value" placeholder="00.00" type="number" matInput
+                                    (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
@@ -202,7 +205,7 @@
                         <div fxLayout="row" fxLayoutAlign="between center">
                             <mat-form-field [floatLabel]="'never'" appearance="outline">
                                 <input id="cardiovascular_risk" name="cardiovascular_risk" formControlName="value"
-                                    placeholder="00" type="number" matInput>
+                                    placeholder="00" type="number" matInput (keypress)="isNumberOrDot($event.key)">
                             </mat-form-field>
                             <ng-container *ngIf="showPreloadData">
                                 <mat-icon class="field-icon-vital-sign" color="primary">
