--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -15,51 +15,15 @@
                 <mat-card-subtitle>
                     <span id="gender_age" [translate]=viewGenderAge()></span>
                 </mat-card-subtitle>
+				<mat-card-subtitle *ngIf="internmentEpisodeProcess?.inProgress">
+                    <div class="label-episodes label-internment-episode uppercase">
+                        <strong class="uppercase" [translate]="'ambulatoria.paciente.card.INTERNMENT_EPISODE_ACTIVE'"></strong>
+                    </div>
+                </mat-card-subtitle>
             </mat-card-header>
         </div>
-        <div fxLayout="row" fxLayoutAlign="center center">
-            <div *ngIf="bloodType?.length" fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3px" id="blood-type-container">
-                <span class="center-align">{{ 'ambulatoria.paciente.card.GROUP_AND_FACTOR' | translate }}</span>
-                <span class="center-align">{{ 'ambulatoria.paciente.card.SANGUINEOUS' | translate }}</span>
-                <h1 class="color-primary bold" id="blood-type">{{ bloodType }}</h1>
-            </div>
-            <div *ngIf="internmentEpisodeProcess?.inProgress" fxLayout="column" id="coverage-container">
-                <div fxLayout="row">
-                    <div fxLayout="column">
-                        <mat-icon class="color-primary" fontSet="material-icons-outlined">health_and_safety</mat-icon>
-                    </div>
-                    <div fxLayout="column">
-                        <div fxLayout="row" id="coverage-title">
-                            <span class="color-primary bold">{{ 'ambulatoria.paciente.card.internment.COVERAGE_TITLE' | translate }}</span>
-                        </div>
-                        <ng-container *ngIf="internmentEpisodeCoverageInfo">
-                            <div fxLayout="row">
-                                <span class="bold"> {{ internmentEpisodeCoverageInfo?.medicalCoverage?.name }}</span>
-                            </div>
-                            <div fxLayout="row">
-                                <span> {{ internmentEpisodeCoverageInfo?.medicalCoverage?.plan }}</span>
-                            </div>
-                            <div fxLayout="row">
-                                <span> {{ 'ambulatoria.paciente.card.internment.AFFILIATE_NUMBER' | translate }}
-									<ng-container *ngIf="!internmentEpisodeCoverageInfo?.affiliateNumber">
-										<span class="no-information">{{ 'ambulatoria.paciente.card.internment.NO_INFO' | translate }}</span>
-									</ng-container>
-							        <ng-container *ngIf="internmentEpisodeCoverageInfo?.affiliateNumber">
-										<span>{{ internmentEpisodeCoverageInfo?.affiliateNumber }}</span>
-									</ng-container>
-								</span>
-                            </div>
-                        </ng-container>
-                        <ng-container *ngIf="!internmentEpisodeCoverageInfo">
-                            <div fxLayout="row" class="no-information">
-                                <span>{{ 'ambulatoria.paciente.card.internment.WITHOUT_COVERAGE' | translate }}</span>
-                            </div>
-                        </ng-container>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <ng-content id="horizontal_content" select="[horizontal-content]"></ng-content>
+		<ng-content id="info-content" select="[info-content]"></ng-content>
+        <ng-content id="buttons-content" select="[buttons-content]"></ng-content>
     </div>
     <mat-card-content>
         <ng-content id="vertical_content" select="[content]"></ng-content>
