--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -37,6 +37,10 @@ mat-card-header {
 		background-color: #ffcece;
 		color: #EB5757;
 	}
+	.label-emergency-care-episode {
+		background-color: #FFF7E6;
+		color: #FFA500;
+	}
 }
 
 .card-style-1{
